<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ThystTV</string>
    <string name="notification_downloads_channel_id" translatable="false">thysttv_downloads_channel</string>
    <string name="notification_live_channel_id" translatable="false">thysttv_live_channel</string>
    <string name="notification_playback_channel_id" translatable="false">thysttv_playback_channel</string>
    <string name="lang_de" translatable="false">Deutsch</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_es" translatable="false">Español</string>
    <string name="lang_fr" translatable="false">Français</string>
    <string name="lang_gl" translatable="false">Galego</string>
    <string name="lang_in" translatable="false">Indonesia</string>
    <string name="lang_it" translatable="false">Italiano</string>
    <string name="lang_pt_br" translatable="false">Português - Brasil</string>
    <string name="lang_tr" translatable="false">Türkçe</string>
    <string name="lang_ru" translatable="false">Русский</string>
    <string name="lang_ar" translatable="false">العربية</string>
    <string name="lang_ja" translatable="false">日本語</string>
    <string name="lang_zh_tw" translatable="false">中文（繁體）</string>
    <string name="lang_zh_cn" translatable="false">中文（简体）</string>
    <string name="games">Games</string>
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="downloads">Downloads</string>
    <string name="connection_error">Error connecting to the server. Please try again.</string>
    <string name="sort">Sort</string>
    <string name="upload_date">Upload date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="view_count">View count</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="sort_and_period">Sort by: %1$s. Period: %2$s</string>
    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="videos">Videos</string>
    <string name="clips">Clips</string>
    <string name="scroll_down">Scroll down</string>
    <string name="auto">Auto</string>
    <string name="source">Source</string>
    <string name="audio_only">Audio only</string>
    <string name="chat_only">Chat only</string>
    <string name="video_quality" translatable="false">Video quality</string>
    <string name="audio_chat_modes" translatable="false">Audio / chat only</string>
    <string name="audio_only_quality_summary" translatable="false">Keep audio playback without video</string>
    <string name="chat_only_quality_summary" translatable="false">Keep chat visible without video playback</string>
    <string name="select_quality">Select quality</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading...</string>
    <string name="downloaded">Download complete</string>
    <string name="uploaded_date">Uploaded %s</string>
    <string name="downloaded_date">Downloaded %s</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="skip">Skip</string>
    <string name="specify_time">Specify time</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="duration">Duration: %s</string>
    <string name="invalid_time">Invalid time</string>
    <string name="from_is_greater">\"From\" must be less than \"To\".</string>
    <string name="to_is_lesser">\"To\" must be greater than \"From\".</string>
    <string name="to_is_longer">\"To\" can\'t be greater than video length.</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this video?</string>
    <string name="token_expired">Your session has expired. Please log in again.</string>
    <string name="no_connection">No Internet connection</string>
    <string name="connection_restored">Back online</string>
    <string name="notification_downloads_channel_title">Downloads</string>
    <string name="storage_permission_title">Storage permission required</string>
    <string name="storage_permission_message">Storage permission is required to download videos.</string>
    <string name="permission_denied">Required permissions were denied.</string>
    <string name="nothing_here">Nothing here</string>
    <string name="watch_live">Watch live</string>
    <string name="open_player">Open player</string>
    <string name="error_stream">Error when loading stream</string>
    <string name="dark">Dark</string>
    <string name="amoled">Black</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="landscape_chat_width">Landscape chat width</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="internal_storage">Internal storage</string>
    <string name="save_to">Save to</string>
    <string name="no_storage_detected">No available storage detected (most likely the phone is connected to a computer).</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Fast forward</string>
    <string name="seconds_full">%s seconds</string>
    <string name="unfollow_channel">Unfollow %s?</string>
    <string name="now_following">You\'re now following %s</string>
    <string name="unfollowed">Unfollowed %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="chat_replay_unavailable">Chat replay is unavailable</string>
    <string name="video_subscribers_only">This video is only available to subscribers.</string>
    <string name="player_error">Player error, retrying...</string>
    <string name="picture_in_picture">Picture-in-Picture</string>
    <string name="source_vod_start">Start: %s</string>
    <string name="source_vod_end">End: %s</string>
    <string name="stream_ended">The stream has ended.</string>
    <string name="download_pending">Pending</string>
    <string name="downloading_progress">Downloading: %d%%</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="error_loading_user">Error loading user profile</string>
    <string name="reply">Reply</string>
    <string name="copy_message">Copy message</string>
    <string name="view_profile">View profile</string>
    <string name="chat">Chat</string>
    <string name="recent_emotes">Recent</string>
    <string name="notification_playback_channel_title">Playback</string>
    <string name="channels">Channels</string>
    <string name="watch_video">Watch full video</string>
    <string name="animated_emotes">Animated emotes</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="start">Start</string>
    <string name="set">Set</string>
    <string name="stop">Stop</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="playback_will_stop">Playback will stop in %s.</string>
    <string name="playback_will_stop_hours_minutes">Playback will stop in %1$s %2$s.</string>
    <string name="timer_canceled">The timer has been canceled.</string>
    <string name="trouble_logging_in">Having trouble logging in?</string>
    <string name="no_browser_found">No browser app found</string>
    <string name="browser_workaround">Your system browser is no longer supported. Please press the button below for a workaround.</string>
    <string name="error">Error: %s</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="player_defaultquality">Default player quality</string>
    <string name="playback_speed">Playback speed</string>
    <string name="quality">Quality</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="stats" translatable="false">Stats</string>
    <string name="hide_chat">Hide chat</string>
    <string name="hide_chat_bar">Hide chat input</string>
    <string name="viewer_list">Viewer list</string>
    <string name="disconnect_chat">Disconnect from chat</string>
    <string name="restart_player">Restart player</string>
    <string name="reload_emotes">Reload emotes</string>
    <string name="keep_screen_on_when_paused">Keep screen on when video is paused</string>
    <string name="player_data_saver" translatable="false">Data saver</string>
    <string name="show_subtitles">Show subtitles</string>
    <string name="show_media_playlist_tags">Show media playlist tags</string>
    <string name="show_multivariant_playlist_tags">Show multivariant playlist tags</string>
    <string name="disable_background_video">Disable video rendering in the background</string>
    <string name="use_background_audio_track">Switch to audio-only track in the background</string>
    <string name="use_audio_focus">Pause when other apps play audio</string>
    <string name="handle_audio_becoming_noisy">Pause when headphones are disconnected</string>
    <string name="chapters">Chapters</string>
    <string name="save_video_positions">Save positions of watched videos</string>
    <string name="delete_video_positions">Delete video positions</string>
    <string name="avoid_rounded_corners">Avoid rounded screen corners</string>
    <string name="translate_all_messages">Translate all messages on this channel</string>
    <string name="move_player_freely">Move minimized player freely</string>
    <string name="use_background_audio_pip_closed">Play audio in the background when closing PiP</string>
    <string name="use_background_audio_pip_locked">Play audio in the background when the screen is locked in PiP mode</string>
    <string name="default_cellular_quality">Default player quality on cellular network</string>
    <string name="stats_range_7_days" translatable="false">7 days</string>
    <string name="stats_range_30_days" translatable="false">30 days</string>
    <string name="stats_range_all_time" translatable="false">All time</string>
    <string name="player_gestures_category" tools:ignore="MissingTranslation">Gestures</string>
    <string name="player_gestures_enabled" tools:ignore="MissingTranslation">Enable gestures</string>
    <string name="player_gestures_enabled_summary" tools:ignore="MissingTranslation">Control volume and brightness with gestures</string>
    <string name="player_gestures_haptic" tools:ignore="MissingTranslation">Haptic feedback</string>
    <string name="player_gestures_haptic_summary" tools:ignore="MissingTranslation">Vibrate when changing volume or brightness</string>
    <string name="player_gestures_sensitivity" tools:ignore="MissingTranslation">Sensitivity</string>
    <string name="player_gestures_zone_split" tools:ignore="MissingTranslation">Zone split</string>
    <string name="display_mode" tools:ignore="MissingTranslation">Display mode</string>
    <string name="stream_volume" tools:ignore="MissingTranslation">Stream volume</string>
    <string name="more_group_stream" tools:ignore="MissingTranslation">Stream</string>
    <string name="more_group_chat" tools:ignore="MissingTranslation">Chat</string>
    <string name="more_group_playback" tools:ignore="MissingTranslation">Playback</string>
    <string name="more_group_help" tools:ignore="MissingTranslation">Help</string>
    <string name="more_player_gestures" tools:ignore="MissingTranslation">Player gestures</string>
    <string name="player_gesture_guide_title" tools:ignore="MissingTranslation">Player gestures</string>
    <string name="player_gesture_guide_settings_summary" tools:ignore="MissingTranslation">Show the player gesture guide</string>
</resources>