<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/player_gestures_category">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="player_gestures_enabled"
            android:title="@string/player_gestures_enabled"
            android:summary="@string/player_gestures_enabled_summary"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="player_gestures_haptic"
            android:title="@string/player_gestures_haptic"
            android:summary="@string/player_gestures_haptic_summary"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/playerGesturesSensitivityEntries"
            android:entryValues="@array/playerGesturesSensitivityValues"
            android:key="player_gestures_sensitivity"
            android:title="@string/player_gestures_sensitivity"
            android:summary="%s"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:defaultValue="0.5"
            android:entries="@array/playerGesturesZoneSplitEntries"
            android:entryValues="@array/playerGesturesZoneSplitValues"
            android:key="player_gestures_zone_split"
            android:title="@string/player_gestures_zone_split"
            android:summary="%s"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="player_gesture_guide"
            android:title="@string/player_gesture_guide_title"
            android:summary="@string/player_gesture_guide_settings_summary"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="player_disable_background_video"
        android:title="@string/disable_background_video"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_use_background_audio_track"
        android:title="@string/use_background_audio_track"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_background_audio_pip_closed"
        android:title="@string/use_background_audio_pip_closed"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="player_background_audio_pip_locked"
        android:title="@string/use_background_audio_pip_locked"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_keep_screen_on_when_paused"
        android:title="@string/keep_screen_on_when_paused"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_audio_focus"
        android:title="@string/use_audio_focus"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="player_handle_audio_becoming_noisy"
        android:title="@string/handle_audio_becoming_noisy"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="saved"
        android:entries="@array/playerQualityEntries"
        android:entryValues="@array/playerQualityValues"
        android:key="player_defaultquality"
        android:summary="%s"
        android:title="@string/player_defaultquality"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />
 
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="player_data_saver"
        android:title="@string/player_data_saver"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="saved"
        android:entries="@array/playerQualityEntries"
        android:entryValues="@array/playerQualityValues"
        android:key="player_default_cellular_quality"
        android:summary="%s"
        android:title="@string/default_cellular_quality"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_rounded_corner_padding"
        android:title="@string/avoid_rounded_corners"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_move_freely"
        android:title="@string/move_player_freely"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="player_use_videopositions"
        android:title="@string/save_video_positions"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="delete_video_positions"
        android:title="@string/delete_video_positions"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

</androidx.preference.PreferenceScreen>
