<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollTargetViewId="@id/statsRecyclerView">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/stats_menu"
            app:title="@string/stats" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="@dimen/stats_page_padding"
            android:paddingEnd="@dimen/stats_page_padding"
            android:layout_marginBottom="8dp"
            android:scrollbars="none"
            app:layout_scrollFlags="scroll|enterAlways">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/rangeButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedButton="@id/range7Days"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/range7Days"
                    style="@style/StatsRangeButton"
                    android:text="@string/stats_range_7_days" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/range30Days"
                    style="@style/StatsRangeButton"
                    android:text="@string/stats_range_30_days" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/rangeAllTime"
                    style="@style/StatsRangeButton"
                    android:text="@string/stats_range_all_time" />

            </com.google.android.material.button.MaterialButtonToggleGroup>
        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/stats_page_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_stats_screen_time" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
